# vep-ai-validation-tools

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  README.md.backup  SECURITY.md  bandit-report.json  pyproject.toml
.cursor/: mcp.json
.cursor/rules/: resource-documentation-links.mdc
.docs/: GITHUB_PAGES_SETUP.md  auto-labeling.md  troubleshooting.md  uv-template-guide.md
.docs/.source/: api.rst  index.rst  installation.rst  troubleshooting.rst  usage.rst
.docs/source/: api.rst  conf.py  contributing.rst  index.rst  installation.rst  troubleshooting.rst  usage.rst
.docs/source/_static/: .gitkeep
.github/: PULL_REQUEST_TEMPLATE.md  labeler.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  general.yml
.github/workflows/: auto-label.yml  ci.yml  cleanup-ignored-files.yml  code-quality.yml  docs.yml  performance.yml  publish.yml  release-automation.yml  security-scan.yml  workflow-diagnostics.yml
.scripts/: auto-generate-readme.sh  create-release.sh  post-install.sh  replace-template-vars.sh  setup-pre-commit.sh  setup-template.sh  setup-uv-project.sh  uv-hook.sh  uv-post-sync.sh
.tests/: conftest.py  test_core.py
docs/: uv-template-guide.md
examples/: agent_debug_test.py  basic_usage.py  debug_agent_input.py  debug_create_model.py  debug_field_data.py  debug_rename_model.py  show_texas_fields.py  simple_processing_test.py  test_agent_output.py  test_rename_model.py  test_renaming_agent.py  texas_data_debug.py  texas_voter_test.py
src/uv_template_project/: __init__.py  core.py
src/vep_ai_validation_tools/: __init__.py  address_graph.py  base_graph.py  core.py
src/vep_ai_validation_tools/.data/: address-config.toml  field_criteria.toml  field_definitions.toml  field_reference_info.toml  missing_definitions.csv  missing_field_definitions.toml
src/vep_ai_validation_tools/.data/state_voterfiles/: montana.toml  ohio.toml  texas-austin.toml  texas.toml  wisconsin.toml
src/vep_ai_validation_tools/agents/: __init__.py  address_agent.py  base.py  district_agent.py  election_agent.py
src/vep_ai_validation_tools/graph/: __init__.py  factory.py  processor.py
src/vep_ai_validation_tools/models/: __init__.py  address.py  district.py  election.py  enums.py  voter.py
src/vep_ai_validation_tools/nodes/: __init__.py  all_nodes.py  base.py  parsing_nodes.py  utility_nodes.py  validation_nodes.py
src/vep_ai_validation_tools/prompts/: address_parsing.md  district_parsing.md  election_parsing.md  field_classification.md  renaming_column_guesser.md
src/vep_ai_validation_tools/renaming/: __init__.py  renaming.py  renaming_funcs.py  renaming_main.py  toml_reader.py  validation_cls.py
